fix: menu overlapped by images

--- a/_sass/modules/_header.scss
+++ b/_sass/modules/_header.scss
@@ -4,6 +4,7 @@
   position: fixed;
   top: 0;
   width: 100%;
+  z-index: 2;
 
   @media screen and (max-width: $tablet-max) {
     padding: 0.5rem 0;
